[tool.poetry]
name = "bluesky-summarizer"
version = "0.1.0"
description = ""
authors = ["Stasiu and Marek"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^6.0.0"
atproto = {version = "^0.0.61", python = ">=3.11,<3.14"}
google-genai = "^1.14.0"
retry = "^0.9.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
